--- a/app/templates/detail_classe.html
+++ b/app/templates/detail_classe.html
@@ -20,14 +20,14 @@
 {% endwith %}
 
 <!-- Actions principales -->
-<div class="actions-section">
+<!-- <div class="actions-section">
     <a href="{{ url_for('classes.ajouter_depense_travail', nom_classe=nom_classe) }}" class="btn-success">
         ➕ Dépense travaux étudiants
     </a>
     <a href="{{ url_for('depenses.choisir_classe_examen', nom_classe=nom_classe) }}" class="btn-secondary">
         📄 Dépenses examens
     </a>
-</div>
+</div> -->
 
 <!-- Barre de recherche -->
 <form method="get" class="form-inline search-form">
